# msc-math-viterbo

./: .JuliaFormatter.toml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  Justfile  MIGRATION.md  Makefile  Manifest.toml  Project.toml  README.md  coverage.xml  mkdocs.yml  package.json  pyproject.toml  pyrightconfig.json  pyrightconfig.strict.json  pytest.ini  sitecustomize.py  skills.index.md  waivers.toml
.cache/: coverage_base.txt  impacted_nodeids.txt  last-junit.xml
.devcontainer/: Justfile  README.md  codex-cloud-custom-instructions.md  devcontainer.json  devcontainer.local.json  post-create.sh  post-start.sh
.devcontainer/cloudflare/: README.md  worker-font-injector.js  worker-vk-sanitizer.js  wrangler-sanitizer.toml  wrangler.toml
.devcontainer/codespaces/: devcontainer.json
.devcontainer/local/: devcontainer.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
.github/workflows/: ci.yml  codex.yml  docs.yml
docs/: 01-goal.md  01-project-goal.md  02-project-roadmap.md  02-roadmap.md  03-conventions.md  03-reading-list.md  04-environment.md  05-working-with-codex.md  06-weekly-mail-workflow.md  100-codex-context-comparison.md  11-math-thesis-topics.md  12-math-reading-list.md  13-symplectic-quantities.md  22-code-structure.md  94-codex-cli-context.md  95-codex-cli-context-discussion.md  96-codex-ide-context.md  97-codex-ide-context-discussion.md  98-codex-cloud-context.md  99-codex-cloud-context-discussion.md  AGENTS.md  README.md  algorithm-implementation-plan.md  charter.md  convex-polytope-cehz-capacities.md  convex-polytope-volumes.md  creating_skills.md  environment.md  index.md  project-structure.md  test-math-summary.md  testing-decision-criteria.md  testing-improvement-plan.md  testing-testcase-review.md  workflows-project-owner-vibekanban.md  working-with-codex.md
docs/architecture/: overview.md
docs/briefs/: 2025-10-07-adr-impacted-coverage-selector.md  2025-10-07-task-combinatorial-reeb-formalization.md  2025-10-07-task-systolic-advanced-directions.md  2025-10-07-task-systolic-baselines.md  2025-10-07-task-systolic-certificates.md  2025-10-07-task-systolic-landscape-scans.md  2025-10-07-task-systolic-ml-program.md  2025-10-07-task-systolic-overview.md  2025-10-07-task-systolic-pipeline.md  2025-10-07-workflow-task-evaluation.md  2025-10-08-workflow-brief-authoring.md  2025-10-09-rfc-list-of-experiments.md  2025-10-09-task-database-infra.md  2025-10-10-task-migrate-modern-module.md  2025-10-11-task-proposed-meetup-notebooks.md  2025-10-11-task-spectrum-algorithm.md  2025-10-11-task-symplectic-polytope-similarity.md  2025-10-12-adr-data-spine-hf-datasets.md  2025-10-12-adr-modernization-source-of-truth.md  2025-10-12-adr-no-batching-in-library.md  2025-10-12-policy-project-goal.md  2025-10-12-task-api-simplification-plan.md  2025-10-12-task-atlas-migrate-hf-datasets.md  2025-10-12-task-modernization-roadmap.md  2025-10-12-workflow-brief-authoring.md  2025-10-12-workflow-capacity-algorithms.md  2025-10-12-workflow-codex-collaboration.md  2025-10-12-workflow-reading-archive.md  2025-10-12-workflow-reading-list.md  2025-10-12-workflow-symplectic-quantities.md  2025-10-12-workflow-task-evaluation.md  2025-10-12-workflow-thesis-topic-probing-viterbo.md  2025-10-13-task-datasets-slimming.md  polytope-encodings.md
docs/datasets/: atlas_tiny.md
docs/math/: README.md  (+11 more)
mail/: CONTEXT.md  README.md  questionnaire.md  template-weekly-mail.md
notebooks/: atlas_tiny_analysis.py  atlas_tiny_build.py  atlas_tiny_explorer.py  atlas_tiny_profile.py  build_atlas_tiny.py  dummy_generate.py  dummy_plot.py  exp1.py  modern_atlas_builder.py  modern_atlas_consumer.py  viterbo_counterexample.py  viterbo_counterexample_proposal.py
progress-reports/: AGENTS.md  README.md  weekly-mail-prompt.md  weekly-mail-template.md
scripts/: README.md  _test_metadata_helpers.py  benchmark_oriented_edge.py  build_atlas_small.py  check_test_metadata.py  check_waivers.py  cpp_preflight.py  evaluate_logreg_toy.py  fetch_paper.py  generate_logreg_toy_dataset.py  happy-agent  impacted_cov.py  inc_select.py  load_skills_metadata.py  profile_ehz.py  pytest_changed.sh  render_notebooks.py  report_test_metadata.py  train_logreg_toy.py  verify_cpu_torch.py
skills/: always.md  architecture-overview.md  authoring-skills.md  basic-environment.md  benchmarking-and-profiling.md  coding-standards.md  collaborating-and-reporting.md  collaboration-reporting.md  daily-development.md  data-collation.md  devcontainer-ops.md  environment-tooling.md  executing-daily-workflow.md  experiments-notebooks-artefacts.md  following-coding-standards.md  good-code-loop.md  interacting-with-vibekanban.md  math-layer.md  math-theory.md  navigating-the-repository.md  notebook-etiquette.md  operating-devcontainer.md  operating-environment.md  papers-workflow.md  performance-discipline.md  repo-layout.md  repo-onboarding.md  roles-scope.md  skill-authoring.md  testing-and-ci.md  testing-and-troubleshooting.md  testing-workflow.md  understanding-architecture.md  understanding-roles-and-scope.md  using-core-tooling.md  vibekanban.md  working-in-math-layer.md  working-with-notebooks.md  writing.md
src/: ViterboConjecture.jl
test/: aqua.jl  runtests.jl
tests/: __init__.py  _polytope_samples.py  conftest.py  polytopes.py  test_collate.py  test_core.py  test_core_symplectic.py  test_cpp_extension.py  test_cpp_extension_fallbacks.py  test_deep_placeholder.py  test_ehz_capacity.py  test_ehz_capacity_fast.py  test_facet_normals_algorithms.py  test_haim_kislev_action.py  test_halfspaces.py  test_hello.py  test_math_geometry.py  test_math_halfspaces.py  test_math_random_polytopes.py  test_math_symplectic.py  test_math_symplectic_invariants.py  test_polytope_combinatorics.py  test_polytopes_geometry.py  test_runtime_budget.py  test_search.py  test_smoke.py  test_solvers.py  test_systolic.py  test_volume.py
thesis/: AGENTS.md  README.md  main.tex  references.bib
(+542 files in other folders)
