[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viterbo"
version = "0.1.0"
description = "Numerical experiments around the Viterbo conjecture"
readme = "README.md"
authors = [{ name = "MSc Viterbo Team" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1,<2.6",
    "numpy>=2.3.3",
    "matplotlib>=3.9.2",
    "ninja>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.13.3",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.40",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
    ".benchmarks",
    "tmp/",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
# Prioritize correctness and policy; de-emphasize cosmetic style checks.
select = [
    "E7", "E9",
    "F",
    "D",
    "I",
    "UP",
    "ANN401",
    "PGH003",
    "TID252",
    "RUF100",
    "B006", "B008",
    "BLE001",
    "T20",
]
ignore = [
    "D100",
    "D104",
    "D203",
    "D212",
    "D401",
    "D417",
    "D202",
    "D205",
    "D301",
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D"]
"src/viterbo/__init__.py" = ["F401"]
"src/viterbo/**/__init__.py" = ["F401", "F841", "ANN401"]
"typings/**/*" = ["TID252", "ANN401", "UP035", "UP037", "UP047", "I001"]
"notebooks/**" = ["T20", "I001", "D", "F401", "UP035"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true
suppress-dummy-args = true
ignore-fully-untyped = true


# Coverage configuration for local coverage reports.
[tool.coverage.run]
branch = true
source = ["src/viterbo"]
